fixed alignment of the task Header in Table 2

--- a/frontend-spa/docs/CSS/Style.css
+++ b/frontend-spa/docs/CSS/Style.css
@@ -201,13 +201,15 @@ tbody {
     border: solid;
     border-radius: 5%;
 }
-
-/* .edit-container{
-    border: solid;
-} */
-/* .edit-releaseTask__header{
+.table-2__header{
+    margin-left: 42%;
+}
+.edit-container{
+    margin-left: 30px;
+}
+.edit-releaseTask__header{
     margin-left: 70px;
-} */
+}
 .edit-releaseTask__name{
     min-width: 50%;
 }
